make stop button smaller / compile bigger, issue #236

--- a/webapp/public/custom.css
+++ b/webapp/public/custom.css
@@ -662,6 +662,10 @@ html {
     }
 }
 
+.ui.fluid.button.half{
+    width:50% !important;
+}
+
 /* monaco editor */
 
 .monaco-editor.vs .token.ts.identifier:hover {
